--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Yovaldrone : Prestations Videos Drone</title>
+    <title>Yovaldrone : Prestations de Videos Drone</title>
   </head>
   <body>
     <!-- NAVIGATION -->
